--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ ul {
     margin: 0;
 }
 
-
 i {
     color: #fff;
 }
@@ -86,21 +85,9 @@ i {
 .profile-wishlist-cart-nav {
     padding: 8px;
     justify-content: space-between;
+    gap: 8px;
 }
 
-/* .icon-set {
-     display: flex;
-     flex-direction: column;
-     justify-content: space-evenly;
-     align-items: center;
-} */
-
-/* .icon {
-    height: 24px;
-    width: 24px;
-} */
-
-.icon-text {
-    color: #fff;
-    font-size: 12px;
+.pwc span {
+    display: block;
 }
