--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -18,8 +18,11 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 8px 72px;
-    border-bottom: 1px solid #ddd;
     box-shadow: 0 0 8px rgba(0,0,0,.1);
+}
+
+.logo {
+    padding: 8px;
 }
 
 a {
@@ -36,10 +39,12 @@ ul {
 
 i {
     color: #fff;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .nav-links {
-    font-size: 16px;
+    font-size: 20px;
     gap: 20px;
     padding: 16px;
 }
@@ -69,7 +74,6 @@ i {
 #drop-down-button {
     background-color: #223F40;
     border: none;
-    cursor: pointer;
     font-size: 16px;
 }
 
@@ -90,4 +94,81 @@ i {
 
 .pwc span {
     display: block;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+.hero-section {
+    background-color: #EBB732;
+    padding: 24px 72px;
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+    height: 600px;
+}
+
+#promo-note {
+    padding: 6px 12px;
+    background-color: #D9D9D9;
+    width: max-content;
+    border-radius: 4px;
+    display: flex;
+    justify-self: center;
+    margin: 0px;
+}
+
+.hero-text-content {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 24px;
+}
+
+.hero-title {
+    font-size: 96px;
+    font-weight: 900;
+    color: #fff;
+}
+
+.hero-text {
+    font-size: 24px;
+    font-weight: 400px;
+    width: 500px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btns {
+    background-color: #EBB732;
+    color: #000;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 24px;
+    font-size: 16px;
+}
+
+#hero-button {
+    background-color: #223F40;
+    color: #fff;
+    gap: 8px;
+}
+
+#promo,
+.hero-text, 
+.fa-chevron-right {
+    color: #000;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.hero-image {
+    /* height: 600px; */
+    width: 1200px;
+    display: flex;
+    align-items: flex-end;
 }
