Optimised search bar btns' code & wrote html for 1/2 of product section.
Removed individual ids from buttons in the search bar
and gave them a class of search-bar-btns, reducing the
number of lines used to style them in the CSS.

Wrote out the html for the first half of the Product
section, showing the menu for fruits

--- a/style.css
+++ b/style.css
@@ -70,8 +70,7 @@ i {
     outline: none;
 }
 
-#search-button,
-#drop-down-button {
+.search-bar-btn {
     background-color: #223F40;
     border: none;
     font-size: 16px;
