--- a/style.css
+++ b/style.css
@@ -202,26 +202,31 @@ img {
 }
 
 .product-box {
+    position: relative;
     display: flex;
-    flex: 1;
-    flex-wrap: wrap;
+    flex-direction: column;
+    height: 253px;
+    width: 267px;
 }
 
-.product-image {
-    height: 288px;
-    width: 274px;
-    border-radius: 16px;
-    overflow: hidden;
+.product-title-text-button {
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+    position: absolute;
+    bottom: 16px;
+    left: 16px;
 }
 
 .product-title {
     font-size: 36px;
-    font-weight: 900;
+    font-weight: 700;
     color: #EBB732;
 }
 
 .product-text {
     font-size: 18px;
     font-weight: 400;
-    /* color: #fff; */
+    color: #fff;
 }
