Add overlay to images in the first part of the product menu category.
However, the border-radius doesn't seem to be working
on all corners just yet and I haven't figured out why.
I also think the root of these problems lie in the
images used. There's just something about them..cause
tell me why the dates image refuses to have its overlay
reach the top. *pft

Anyways, I would have it sorted, but  ask for help if
I can't seem to geta round it.

oh. I also center-aligned the items within the "view more"
buttons.

Alright. Unto the second part of the product section.
Took you long enough.

--- a/style.css
+++ b/style.css
@@ -146,6 +146,8 @@ i {
     border-radius: 8px;
     padding: 8px 24px;
     font-size: 16px;
+    display: flex;
+    align-items: center;
 }
 
 #hero-button {
@@ -199,34 +201,43 @@ img {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    padding-bottom: 16px;
 }
 
 .product-box {
+    padding: 16px 0px;
     position: relative;
     display: flex;
     flex-direction: column;
     height: 253px;
     width: 267px;
+    border-radius: 16px;
+    overflow: hidden;
 }
 
 .product-title-text-button {
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
     position: absolute;
-    bottom: 16px;
-    left: 16px;
+    bottom: 0;
+    left: 0;
+    padding: 78px 12px 16px 16px;
+    background-color: #00000080;
+    gap: 4px;
 }
 
 .product-title {
     font-size: 36px;
     font-weight: 700;
     color: #EBB732;
+    
 }
 
 .product-text {
     font-size: 18px;
     font-weight: 400;
     color: #fff;
+    padding-bottom: 16px;
+}
+
+.product-info {
+    cursor: pointer;
 }
