Create the Blog Section w title, copy, 3 cards & two-colored backgrounds.
Hi. I am tired and feeling slow, despite hybernating most of today.

This commit:
-   creates the blog section; centralising its title
    and copy/text.
-   creates 3 cards with box-shadow effect.
-   make the background color have two colors using
    the linear-gradient feature in css.

I feel there are things I need to improve, like the
button that spans across the width of the cards, but
I really am not up for that now.
Pushed myself to start and get this section done today.
Hoefully, I wrap the website up by midnight. I take a break now.
Ciao.

--- a/style.css
+++ b/style.css
@@ -194,7 +194,8 @@ img {
 
 .product-section,
 .bestseller-section,
-.fruits-n-donuts {
+.fruits-n-donuts,
+.blog-section {
     background-color: #fff;
     padding: 32px 72px;
     display: flex;
@@ -214,7 +215,8 @@ img {
 .category1n2-header,
 .bestseller-title,
 .info-section-title,
-.testimonial-title {
+.testimonial-title,
+.blog-title {
     font-size: 64px;
     color: #000;
     font-weight: 900;
@@ -396,17 +398,11 @@ select {
     position: relative;
 }
 
-/* .for-category3 {
-    position: relative;
-} */
-
 .category3-img {
     margin-top: 24px;
     position: absolute;
     top: -65px;
     right: -15px;
-    /* top: 0;
-    right: 0px; */
 }
 
 .fruits-n-donuts-ndr {
@@ -510,6 +506,7 @@ select {
 }
 
 .testimonial-card {
+    background-color: #fff;
     border: 2px solid #a1a1a1;
     box-shadow: 3px 3px 6px #d7d4d4;
     border-radius: 8px;
@@ -552,4 +549,71 @@ select {
 
 .customer-name {
     font-weight: 700;
+}
+
+.blog-section {
+    background: linear-gradient(
+        to bottom,
+        #fff 0%,
+        #fff 60%,
+        #223F40 60%,
+        #223F40 100%
+    );
+}
+
+.blog-title-n-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 32px;
+}
+
+.blog-text {
+    font-size: 20px;
+    width: 780px;
+}
+
+.blog-section-half {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.blog-card {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    box-shadow: 0px 4px 4px #6a6565;
+    width: 352px;
+    height: 540px;
+    position: relative;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.blog-card-btn-like-text {
+    background-color: #EBB732;
+    padding: 6px 16px;
+    position: absolute;
+    top: 12px;
+    left: 24px;
+    border-radius: 8px;
+}
+
+.blog-card-lower-section {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.blog-card-title {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.blog-card-text {
+    font-size: 20px;
 }
