--- a/style.css
+++ b/style.css
@@ -348,6 +348,8 @@ select {
     width: 100%;
 }
 
+/* Bestseller Section */
+
 .bestseller-section {
     background-color: #223F40;
     color: #fff;
@@ -387,6 +389,8 @@ select {
 .bestseller {
     background-color: transparent;
 }
+
+/* Fruits and Donuts Section */
 
 .of-fruits-n-donuts {
     margin-bottom: 48px;
@@ -448,6 +452,8 @@ select {
     border: 1px solid #000;
 }
 
+/* Informational Section */
+
 .info-section {
     display: flex;
     margin: 0;
@@ -469,6 +475,8 @@ select {
     flex-direction: column;
     gap: 32px;
 }
+
+/* Testimonial Section */
 
 .testimonial-section {
     background-color: #fff;
@@ -551,6 +559,8 @@ select {
     font-weight: 700;
 }
 
+/* Blog Section */
+
 .blog-section {
     background: linear-gradient(
         to bottom,
@@ -585,7 +595,7 @@ select {
     display: flex;
     flex-direction: column;
     background-color: #fff;
-    box-shadow: 0px 4px 4px #6a6565;
+    box-shadow: 0px 4px 4px #5a5555;
     width: 352px;
     height: 540px;
     position: relative;
@@ -616,4 +626,79 @@ select {
 
 .blog-card-text {
     font-size: 20px;
+}
+
+/*Sub-footer Section*/
+
+.sub-footer-section {
+    color: #fff;
+    background-color: #223F40;
+    padding: 32px 72px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex: 1;
+}
+
+.logo-n-about,
+.subscription-cta {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 340px;
+}
+
+.about,
+.navigation-links,
+.resources-links,
+.subscription-cta-text {
+    font-size: 20px;
+}
+
+.navigation,
+.resources {
+    display: flex;
+    flex-direction: column;
+}
+
+.navigation-title,
+.resources-title,
+.subscription-cta-title {
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 8px;
+}
+
+.navigation-links,
+.resources-links {
+    flex-direction: column;
+    gap: 8px;
+}
+
+.subscription-cta {
+    gap: 32px;
+}
+
+.email-n-button {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.getemail {
+    background-color: transparent;
+    height: 28px;
+    width: 280px;
+    border: 2px solid #fff;
+    color: #fff;
+    outline: none;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.email-submit {
+    background-color: #EBB732;
+    border: 1px solid #000;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
